--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  
     "start": "nodemon index.js",
     "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "^5.5.2",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
